Fixed spacing in Skill component in portrait orientation in small mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -890,6 +890,7 @@ svg {
   .skills-content {
     padding: 5px 0px 5px 0px;
     text-align: center;
+    width: 100%;
   }
 
   .skills-content p {
